--- a/style/site.css
+++ b/style/site.css
@@ -100,15 +100,17 @@ a:hover {
 
 /* Main title */
 .brandTitle {
-    font-family: Georgia, "Times New Roman", serif;
+    font-family: "Gill Sans", "Arial", serif;
     font-size: 18px;
     letter-spacing: 0.08em;
     text-transform: uppercase;
     color: #2f271f;
+    font-weight: bold;
 }
 
 /* Sub line */
 .brandTag {
+    font-family: "Gill Sans", "Arial", serif;
     font-size: 13px;
     color: #6a5c4e;
     margin-top: 4px;
@@ -735,6 +737,12 @@ footer {
     min-width: 0;
     justify-content: flex-end; /* call on the right */
     margin-left: 0;
+  }
+  .brandTitle{
+    font-size:12px;
+  }
+  .brandTag {
+    display:none;
   }
 }
 
